--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -63,17 +63,17 @@
                             <button class="slider__prev"><img src="../../assets/icons/prev.svg" alt=""></button>
                             <div class="slider__cards">
                                 <div class="slider__item pet" data-pet="katrine">
-                                    <img class="pet__photo" src="../../assets/images/pets-katrine.png" alt="photo pet Katrine">
+                                    <img class="pet__photo" src="../../assets/images/katrine.png" alt="photo pet Katrine">
                                     <h4 class="pet__name">Katrine</h4>
                                     <button class="pet__btn">Learn more</button>
                                 </div>
                                 <div class="slider__item pet" data-pet="jennifer">
-                                    <img class="pet__photo" src="../../assets/images/pets-jennifer.png" alt="photo pet Katrine">
+                                    <img class="pet__photo" src="../../assets/images/jennifer.png" alt="photo pet Katrine">
                                     <h4 class="pet__name">Jennifer</h4>
                                     <button class="pet__btn">Learn more</button>
                                 </div>
                                 <div class="slider__item pet" data-pet="woody">
-                                    <img class="pet__photo" src="../../assets/images/pets-woody.png" alt="photo pet Katrine">
+                                    <img class="pet__photo" src="../../assets/images/woody.png" alt="photo pet Katrine">
                                     <h4 class="pet__name">Woody</h4>
                                     <button class="pet__btn">Learn more</button>
                                 </div>
@@ -134,7 +134,7 @@
                             <div class="donation__subtitle">Name of the bank / Type of bank account</div>
                             <a href="#" class="donation__link">
                                 <img src="../../assets/icons/credit-card.svg" alt="">
-                                8380 2880 8028 8791 7435
+                                <p>8380 2880 8028 8791 7435</p>
                             </a>
                             <p class="donation__text">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                         </div>
@@ -154,10 +154,11 @@
                     <div class="footer__location">
                         <h3 class="footer__title">We are waiting for your visit</h3>
                         <a href="mailto:email@shelter.com" class="footer__email">
-                            <img src="../../assets/icons/icon-marker.svg" alt="">1 Central Street, Boston (entrance from the store)</a>
+                            <img src="../../assets/icons/icon-marker.svg" alt=""><p>1 Central Street, Boston (entrance from the store)</p></a>
                         <a href="tel:+136745677554" class="footer__email">
-                            <img src="../../assets/icons/icon-marker.svg" alt="">18 South Park, London </a>
+                            <img src="../../assets/icons/icon-marker.svg" alt=""><p>18 South Park, London</p></a>
                     </div>
+                    <img class="footer__image" src="../../assets/images/footer-puppy.png" alt="puppy">
                 </div>
             </div>
         </footer>
