feat: add interactive and links

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -13,23 +13,23 @@
     <div class="wrapper">
         <header class="header">
             <div class="container header__container">
-                <div class="header__logo logo">
+                <a href="../main/index.html" class="header__logo logo">
                     <h1 class="logo__title">Cozy House</h1>
                     <div class="logo__subtitle">Shelter for pets in Boston</div>
-                </div>
+                </a>
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="#" class="menu__link">About the shelter</a>
+                            <a href="../main/index.html" class="menu__link">About the shelter</a>
                         </li>
                         <li class="menu__item">
                             <a href="#" class="menu__link  menu__link_active">Our pets</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Help the shelter</a>
+                            <a href="../main/index.html#help" class="menu__link">Help the shelter</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Contacts</a>
+                            <a href="#contacts" class="menu__link">Contacts</a>
                         </li>
                     </ul>
                 </nav>
@@ -83,15 +83,15 @@
                         </div>
                 </div>
                 <div class="our-friends__navigation navigation">
-                    <button class="navigation__btn navigation__btn_disabled navigation__btn_to-start" disabled>&lt;&lt;</button>
-                    <button class="navigation__btn navigation__btn_disabled navigation__btn_prev" disabled>&lt;</button>
+                    <button class="navigation__btn navigation__btn_to-start navigation__btn_disabled" disabled>&lt;&lt;</button>
+                    <button class="navigation__btn navigation__btn_prev navigation__btn_disabled" disabled>&lt;</button>
                     <button class="navigation__btn navigation__btn_now">1</button>
                     <button class="navigation__btn navigation__btn_next">&gt;</button>
                     <button class="navigation__btn navigation__btn_to-end">&gt;&gt;</button>
                 </div>
             </section>
         </main>
-        <footer class="footer">
+        <footer class="footer" id="contacts">
             <div class="footer__container container">
                 <div class="footer__row">
                     <div class="footer__contacts">
@@ -103,9 +103,9 @@
                     </div>
                     <div class="footer__location">
                         <h3 class="footer__title">We are waiting for your visit</h3>
-                        <a href="mailto:email@shelter.com" class="footer__email">
+                        <a href="https://goo.gl/maps/RGbH6cVAXCCfkfgEA" target="_blank" class="footer__email">
                             <img src="../../assets/icons/icon-marker.svg" alt=""><p>1 Central Street, Boston (entrance from the store)</p></a>
-                        <a href="tel:+136745677554" class="footer__email">
+                        <a href="https://goo.gl/maps/JfJRBsngFJjHsSjo9" target="_blank" class="footer__email">
                             <img src="../../assets/icons/icon-marker.svg" alt=""><p>18 South Park, London</p></a>
                     </div>
                     <img class="footer__image" src="../../assets/images/footer-puppy.png" alt="puppy">
