--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -13,23 +13,23 @@
     <div class="wrapper">
         <header class="header">
             <div class="container header__container">
-                <div class="header__logo logo">
+                <a href="##" class="header__logo logo">
                     <h1 class="logo__title">Cozy House</h1>
                     <div class="logo__subtitle">Shelter for pets in Boston</div>
-                </div>
+                </a>
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__item">
                             <a href="#" class="menu__link menu__link_active">About the shelter</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Our pets</a>
+                            <a href="../pets/index.html" class="menu__link">Our pets</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Help the shelter</a>
+                            <a href="#help" class="menu__link">Help the shelter</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Contacts</a>
+                            <a href="#contacts" class="menu__link">Contacts</a>
                         </li>
                     </ul>
                 </nav>
@@ -41,7 +41,7 @@
                         <div class="start-screen__content">
                             <h2 class="start-screen__title">Not only people <br>need a house</h2>
                             <p class="start-screen__description">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-                            <button class ="start-screen__btn primary-btn" onclick="document.location.href='#our-friends'">Make a friend</button>
+                            <a href="#our-friends" class ="start-screen__btn primary-btn">Make a friend</a>
                         </div>
                         <img class="start-screen__image" src="../../assets/images/start-screen-puppy.png" alt="puppy">
                     </div>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="main__our-friends our-friends">
+                <section class="main__our-friends our-friends" id="our-friends">
                     <div class="our-friends__container container">
                         <h3 class="our-friends__title section-title">Our friends who<br>are looking for a house</h3>
                         <div class="our-friends__slider slider">
@@ -80,10 +80,10 @@
                             </div>
                             <button class="slider__next"><img src="../../assets/icons/next.svg" alt=""></button>
                         </div>
-                        <button class="our-friends__btn primary-btn">Get to know the rest</button>
+                        <a href="../pets/index.html" class="our-friends__btn primary-btn">Get to know the rest</a>
                     </div>
                 </section>
-                <section class="main__help help">
+                <section class="main__help help" id="help">
                     <div class="help__container container">
                         <h3 class="help__title section-title">How you can help<br>our shelter</h3>
                         <ul class="help__list">
@@ -132,7 +132,7 @@
                         <div class="donation__content">
                             <h3 class="donation__title section-title">You can also<br>make a donation</h3>
                             <div class="donation__subtitle">Name of the bank / Type of bank account</div>
-                            <a href="#" class="donation__link">
+                            <a href="##" class="donation__link">
                                 <img src="../../assets/icons/credit-card.svg" alt="">
                                 <p>8380 2880 8028 8791 7435</p>
                             </a>
@@ -141,7 +141,7 @@
                     </div>
                 </section>
         </main>
-        <footer class="footer">
+        <footer class="footer" id="contacts">
             <div class="footer__container container">
                 <div class="footer__row">
                     <div class="footer__contacts">
@@ -153,9 +153,9 @@
                     </div>
                     <div class="footer__location">
                         <h3 class="footer__title">We are waiting for your visit</h3>
-                        <a href="mailto:email@shelter.com" class="footer__email">
+                        <a href="https://goo.gl/maps/RGbH6cVAXCCfkfgEA" target="_blank" class="footer__email">
                             <img src="../../assets/icons/icon-marker.svg" alt=""><p>1 Central Street, Boston (entrance from the store)</p></a>
-                        <a href="tel:+136745677554" class="footer__email">
+                        <a href="https://goo.gl/maps/JfJRBsngFJjHsSjo9" target="_blank" class="footer__email">
                             <img src="../../assets/icons/icon-marker.svg" alt=""><p>18 South Park, London</p></a>
                     </div>
                     <img class="footer__image" src="../../assets/images/footer-puppy.png" alt="puppy">
