feat: part2: adaptive

--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -33,6 +33,9 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="header__burger">
+                    <span></span>
+                </div>
             </div>
         </header>
         <main class="main">
@@ -85,7 +88,7 @@
                 <div class="our-friends__navigation navigation">
                     <button class="navigation__btn navigation__btn_to-start navigation__btn_disabled" disabled>&lt;&lt;</button>
                     <button class="navigation__btn navigation__btn_prev navigation__btn_disabled" disabled>&lt;</button>
-                    <button class="navigation__btn navigation__btn_now">1</button>
+                    <div class="navigation__btn navigation__btn_now">1</div>
                     <button class="navigation__btn navigation__btn_next">&gt;</button>
                     <button class="navigation__btn navigation__btn_to-end">&gt;&gt;</button>
                 </div>
