--- a/shelter/pages/pets/index.html
+++ b/shelter/pages/pets/index.html
@@ -17,7 +17,9 @@
                     <h1 class="logo__title">Cozy House</h1>
                     <div class="logo__subtitle">Shelter for pets in Boston</div>
                 </a>
+                <div class="header__overlay"></div>
                 <nav class="header__menu menu">
+                    <!-- <div class="header__overlay"></div> -->
                     <ul class="menu__list">
                         <li class="menu__item">
                             <a href="../main/index.html" class="menu__link">About the shelter</a>
