feat: interactive pet page

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -17,7 +17,7 @@
                     <div class="logo__subtitle">Shelter for pets in Boston</div>
                 </a>
                 <nav class="header__menu menu">
-                    <div class="header__overlay"></div>
+                    <div class="menu__overlay"></div>
                     <ul class="menu__list">
                         <li class="menu__item">
                             <a href="#" class="menu__link menu__link_active">About the shelter</a>
